Used grid to correct text, corrected letter spacing and position of the aside element.

--- a/style_htci.css
+++ b/style_htci.css
@@ -15,7 +15,7 @@ main {
 }
 
 h1 {
-  color: #5C78A1;
+  color: #6a788d;
   font-size: 120px;
   margin: 20px 40px 0 60px;
   text-align: center;
@@ -29,8 +29,16 @@ h1 span {
   font-size: 130px;
 }
 
+.grid_container {
+  display: inline-grid;
+  grid-template-columns: 40% 55%;
+  letter-spacing: 0.35em;
+  width: 94%;
+  margin: 0 46px;
+}
+
 h2 {
-  color: #04A3BA;
+  color: #09c2b2;
   letter-spacing: 0.35em;
   text-align: center;
   font-family: 'Paytone One', sans-serif;
@@ -43,25 +51,27 @@ h3 {
   font-size: 65px;
   font-family: 'PT Sans', sans-serif;
   display: inline;
-
+  margin: -22px;
 }
 
 aside {
   font-family: 'Magra', 'Trebuchet MS', sans-serif; 
   text-transform: none;
   color: #FFFFFF;
-  background-color: #04A3BA;
-  width: 175px;
-  height: 150px;
+  background-color: #09c2b2;
+  width: 195px;
+  height: 130px;
   border-radius: 100%;
   text-align: center;
-  padding: 43px 30px;
+  padding: 46px 14px;
   font-size: 30px;
   border: 4px solid #FFFFFF;
-  box-shadow: 0 0 0 10px #04A3BA;
+  box-shadow: 0 0 0 10px #09c2b2;
   margin: 40px;
   position: absolute;
-  left: 710px;
+  left: 741px;
+  top: 274px;
+  letter-spacing: 0.05em;
 }
 
 footer {
